add new line to startHealthyDay

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,7 +3,7 @@
     "@greeting": {
         "description": "Greeting message addressing the user by name."
     },
-    "startHealthyDay": "Let's start your healthy day",
+    "startHealthyDay": "Let's start your\nhealthy day",
     "@startHealthyDay": {
         "description": "Motivational header encouraging user to begin a healthy day."
     },
